frontend/test/should_fail/array_003b.grg
using model_init;

rule initializeTypeMismatch {
	-e:E1->;

	modify {
		eval {
			def ref a:array<A> = array<A>[ e ];
		}
	}
}
